# path_segments

./: 29  CMakeLists.txt  cbd_ta.toml  cvrp.py  disp_result.py  lkh3_interface.h  main.cpp  mtsp.py  result.yaml  runner.sh  setup.py  test.py
LKH-3.0.6/: LKH
cmake/: CPM.cmake  FindFCL.cmake
include/: collision_checker.h  conflict_based_decomposer.h  motion_model.h  path_decomposition.h  polygonal_obstacle.h
include/libMultiRobotPlanning/: next_best_assignment.hpp
include/lkh_mtsp_solver/: input_generator.h  lkh3_interface.h
input/: adjmatrix.csv  adjmatrix2.csv  param.yaml  pointsvisibility.csv  xy.csv
input/mtsp/: amtsp.atsp  amtsp.par  mTspViz.atsp  mTspViz.par  vmtsp.atsp  vmtsp.par  vmtsp_1.par  vmtsp_2.atsp  vmtsp_2.par  vmtsp_3.par  vmtsp_4.par
input_generator/: CMakeLists.txt  input_generator.cpp  main.cpp
input_generator/cmake/: CPM.cmake
lib/: mtsp_node
plotter/: CMakeLists.txt  main.cpp  patrol.py  plotter.py
results/: 1.csv  2.csv  3.csv  4.csv
results/amtsp/: amtsp.tour  vmtsp.tour  vmtsp_1.tour  vmtsp_2.tour  vmtsp_3.tour  vmtsp_4.tour
results/results_RN/: 1.csv  2.csv  3.csv  4.csv
src/: conflict_based_decomposer.cpp  lkh3_interface.cpp
src/cbd_ta/: conflict_based_decomposer.cpp  main_cbd_py.cpp
src/cbd_ta.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: coords.csv  test_collision_checker.cpp
